--- a/index.html
+++ b/index.html
@@ -413,20 +413,21 @@
                                 <ol class="carousel-indicators">
                                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                                     <li data-target="#myCarousel" data-slide-to="1"></li>
-                                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                                    <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
                                 </ol>   
                                 <!-- Wrapper for carousel items -->
                                 <div class="carousel-inner">
                                     <div class="item carousel-item active">
-                                        <div class="img-box"><img src="images/0.jpeg" alt=""></div>
+                                        <div class="img-box"><img src="images/Dr_Sheth.jpeg" alt=""></div>
                                         <p class="testimonial">Initiative, self-directed ability to learn new technologies, excellent teamwork and effective communication, productive coding/software engineering skills, and necessary soft skills needed to thrive in the companies that place importance on work culture.</p>
                                         <p class="overview"><b>Amit Sheth</b> | Director, AI Institute, University of South Carolina</p>
                                     </div>
-                                    <!-- <div class="item carousel-item">
-                                        <div class="img-box"><img src="/examples/images/clients/2.jpg" alt=""></div>
-                                        <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
-                                        <p class="overview"><b>Antonio Moreno</b> | Web Developer</p>
+                                    <div class="item carousel-item">
+                                        <div class="img-box"><img src="images/Scott_Billups.jpg" alt=""></div>
+                                        <p class="testimonial">His professional disposition is particularly well suited to high-pressure and fast-changing environments. His ability to go above what is required and bring innovative options to each iteration makes him particularly invaluable in a fast-growing startup or an established shop that needs an injection of fresh ideas and the latest technologies.</p>
+                                        <p class="overview"><b>Scott Billups</b> | Founder / Chief Technology Officer at StayWell Labs</p>
                                     </div>
+                                    <!-- 
                                     <div class="item carousel-item">
                                         <div class="img-box"><img src="/examples/images/clients/3.jpg" alt=""></div>
                                         <p class="testimonial">Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus risus risus, volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor eget rutrum.</p>
